@@ -2,6 +2,10 @@
 
 * Minor enhancements
   * RDoc::Parser::C now supports :doc: and :nodoc: for class comments
+  * Added the <tt>rdoc:</tt> link scheme which links to a named reference.
+    This can be used to create cross-generator named links unlike the
+    <tt>link:</tt> scheme which is dependent upon the exact file name.  Issue
+    #53 by Simon Chiang
 * Bug fixes
   * `ri []` and other special methods now work properly.  Issue #52 by
     ddebernardy.
